[project]
name = "network-openenv"
version = "0.1.0"
description = "Network traffic optimization OpenEnv environment"
authors = [
    { name = "Akshay" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
